@@ -2,6 +2,7 @@
 - Show note names in flats when the key is going in flats
 - Allow shift-clicking in measure bar to select more measures
 - Shift-clicking on a note that is already selected unselects it
+- Fixed what happens when you resize the frame while a track is maximized
 
 1.3 beta 2
 - Improved working with more than one editor per track
